--- a/TerminalGame.html
+++ b/TerminalGame.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="js/jquery.terminal.min.js"></script>   
+<!-- <script src="js/jquery.terminal.min.js"></script>   
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
 <link rel="stylesheet" href="css/jquery.terminal.min.css" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css"/> -->
+    
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://code.jquery.com/mobile/[version]/jquery.mobile-[version].min.css">
+<script src="https://code.jquery.com/jquery-[version].min.js"></script>
+<script src="https://code.jquery.com/mobile/[version]/jquery.mobile-[version].min.js"></script>
+<script src="js/jquery.terminal.min.js"></script>   
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
+    
 </head>
 <body>
     <script>
