--- a/TerminalGame.html
+++ b/TerminalGame.html
@@ -10,7 +10,7 @@ media="screen and (max-height:500px)">
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css"
-media="screen and (min-device-height:500px)"/>
+media="screen and (min-height:500px)"/>
 </head>
 <body>
     <script>
