--- a/TerminalGame.html
+++ b/TerminalGame.html
@@ -3,14 +3,14 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://code.jquery.com/mobile/[version]/jquery.mobile-[version].min.css" 
-media="screen and (max-height:500px)">
+media="screen and (max-width:500px)">
 <script src="https://code.jquery.com/jquery-[version].min.js"></script>
 <script src="https://code.jquery.com/mobile/[version]/jquery.mobile-[version].min.js"></script>
 <script src="js/jquery.terminal.min.js"></script>   
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css"
-media="screen and (min-height:500px)"/>
+media="screen and (min-width:500px)"/>
 </head>
 <body>
     <script>
