--- a/TerminalGame.html
+++ b/TerminalGame.html
@@ -244,7 +244,9 @@ $('body').terminal({
     play: function() {
         myField = new Field([])
         myField.generateField()
-        this.echo('Find the hat(^) without falling into a hole(O) or leaving the board.')
+        this.echo('Find the hat(^)!')
+        this.echo("Don't fall into a hole(O)")
+        this.echo('or leave the board.')
         this.echo("Directions include:")
         this.echo("L - left, R - right, U - up, D - down")
         for (const row of myField.field) {
